tests/paczka1/fuzzy1/36559276.err
Error in line 11: DPDCzSRPncP S752 95,3
Error in line 21: DPDCzSRPncP A700 -3,9
Error in line 24: xvgm4cX A348 1,8
Error in line 32: DPDCzSRPncP A700 1,1
